feat: create initial structure

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -34,6 +34,7 @@
     "changePassword": "Alterar sua senha",
     "changePasswordText": "Para alterar sua senha digite uma nova abaixo.",
     "changePasswordTokenError": "O token é inválido.",
-    "district": "Bairro"
+    "district": "Bairro",
+    "districts": "Bairros"
   }
 }
