feat: create google login

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -35,6 +35,7 @@
     "changePasswordText": "Para alterar sua senha digite uma nova abaixo.",
     "changePasswordTokenError": "O token é inválido.",
     "district": "Bairro",
-    "districts": "Bairros"
+    "districts": "Bairros",
+    "signinGoogle": "Fazer login com Google"
   }
 }
