feat: add data to store

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -44,6 +44,9 @@
     "restaurantData": "Dados do restaurante",
     "store": "Loja",
     "logout": "Logout",
-    "storeInformation": "Informações da empresa"
+    "storeInformation": "Informações da empresa",
+    "subdomain": "Subdomínio",
+    "cover": "Capa",
+    "logo": "Logo"
   }
 }
