--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -62,6 +62,9 @@
     "customDomain": "Domínio personalizado",
     "minimumOrderPrice": "Preço mínimo por pedido",
     "isClosed": "Está fechado",
-    "isOpen": "Está aberto"
+    "isOpen": "Está aberto",
+    "editCover": "Editar foto de capa",
+    "editLogo": "Adicionar logo",
+    "signinComet": "Crie uma conta no Comet"
   }
 }
