--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -63,7 +63,7 @@
     "minimumOrderPrice": "Preço mínimo por pedido",
     "isClosed": "Está fechado",
     "isOpen": "Está aberto",
-    "editCover": "Editar foto de capa",
+    "editCover": "Adicionar capa",
     "editLogo": "Adicionar logo",
     "signinComet": "Crie uma conta no Comet",
     "editStore": "Editar loja",
