feat: implement profile update

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -68,6 +68,7 @@
     "signinComet": "Crie uma conta no Comet",
     "editStore": "Editar loja",
     "save": "Salvar",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "editProfile": "Editar perfil"
   }
 }
