--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -69,6 +69,12 @@
     "editStore": "Editar loja",
     "save": "Salvar",
     "cancel": "Cancel",
-    "editProfile": "Editar perfil"
+    "editProfile": "Editar perfil",
+    "addLocation": "Adicionar local",
+    "neighborhood": "Bairro",
+    "tax": "Taxa",
+    "estimatedTime": "Tempo estimado",
+    "locations": "Locais",
+    "actions": "Ações"
   }
 }
