--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -75,6 +75,11 @@
     "tax": "Taxa",
     "estimatedTime": "Tempo estimado",
     "locations": "Locais",
-    "actions": "Ações"
+    "actions": "Ações",
+    "addSchedule": "Adicionar horário",
+    "weekDay": "Dia da semana",
+    "start": "Hora de abertura",
+    "end": "Hora do fechamento",
+    "isScheduledClosing": "É fechamento programado?"
   }
 }
