feat: create update schedule

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -82,6 +82,6 @@
     "end": "Hora do fechamento",
     "isScheduledClosing": "É fechamento programado?",
     "schedulesEmptyState": "Não há horários cadastrados no momento.",
-    "schedules": "Horários de funcionamento"
+    "schedules": "Horários"
   }
 }
