feat: add create payment

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -82,6 +82,10 @@
     "end": "Hora do fechamento",
     "isScheduledClosing": "É fechamento programado?",
     "schedulesEmptyState": "Não há horários cadastrados no momento.",
-    "schedules": "Horários"
+    "schedules": "Horários",
+    "addPayment": "Adicionar pagamento",
+    "description": "Descrição",
+    "type": "Tipo",
+    "paymentMethods": "Métodos de Pagamento"
   }
 }
