--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -102,6 +102,7 @@
     "options": "Opções",
     "maxOption": "Máximo de opções",
     "addOptions": "Adicionar opção",
-    "required": "Obrigatório"
+    "required": "Obrigatório",
+    "category": "Categoria"
   }
 }
