feat: create edit address page

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -103,6 +103,8 @@
     "maxOption": "Máximo de opções",
     "addOptions": "Adicionar opção",
     "required": "Obrigatório",
-    "category": "Categoria"
+    "category": "Categoria",
+    "street": "Rua",
+    "number": "Número"
   }
 }
