feat: configure email

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -65,7 +65,7 @@
     "isOpen": "Está aberto",
     "editCover": "Adicionar capa",
     "editLogo": "Adicionar logo",
-    "signinComet": "Crie uma conta no Comet",
+    "signinComet": "Crie uma conta",
     "editStore": "Editar loja",
     "save": "Salvar",
     "cancel": "Cancel",
