refactor: revalidate static content

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -106,6 +106,7 @@
     "category": "Categoria",
     "street": "Rua",
     "number": "Número",
-    "updateOptions": "Editar opção"
+    "updateOptions": "Editar opção",
+    "productOptionsEmptyState": "Nenhuma opção foi adicionada ainda."
   }
 }
