feat: add max option required

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -107,6 +107,7 @@
     "street": "Rua",
     "number": "Número",
     "updateOptions": "Editar opção",
-    "productOptionsEmptyState": "Nenhuma opção foi adicionada ainda."
+    "productOptionsEmptyState": "Nenhuma opção foi adicionada ainda.",
+    "maxOptionRequired": "Máximo de opções obrigatórias"
   }
 }
