feat: add user edit flow

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -108,6 +108,7 @@
     "number": "Número",
     "updateOptions": "Editar opção",
     "productOptionsEmptyState": "Nenhuma opção foi adicionada ainda.",
-    "maxOptionRequired": "Máximo de opções obrigatórias"
+    "maxOptionRequired": "Máximo de opções obrigatórias",
+    "phone": "Telefone"
   }
 }
