--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -13,7 +13,7 @@
     "signin": "Entrar",
     "signup": "Cadastrar",
     "signupPolicyText": "Após cadastrar-se, você estará concordando com os nossos <0>{{termsAndConditions}}</0> e <1>{{privacyPolicy}}</1>",
-    "storeName": "Nome da empresa",
+    "storeName": "Nome da loja",
     "termsAndConditions": "Termos e Condições",
     "yourName": "Seu nome",
     "profile": "Perfil",
