feat: sync user orders

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -110,6 +110,7 @@
     "productOptionsEmptyState": "Nenhuma opção foi adicionada ainda.",
     "maxOptionRequired": "Máximo de opções obrigatórias",
     "phone": "Telefone",
-    "isEnabled": "Ativo"
+    "isEnabled": "Ativo",
+    "code": "Código"
   }
 }
