refactor: change title name

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -42,7 +42,7 @@
     "completeSignin": "Complete o cadastro",
     "userName": "Nome do usuário",
     "restaurantData": "Dados do restaurante",
-    "store": "Loja",
+    "store": "Restaurante",
     "logout": "Logout",
     "storeInformation": "Informações da empresa",
     "subdomain": "Subdomínio",
